--- a/src/html/35_realText.html
+++ b/src/html/35_realText.html
@@ -113,23 +113,23 @@
             <p class="coustom-item">读单词，选出划线部分发音不同的单词，用A, B, C或D表示</p>
           </div>
           <div class="pent-body">
-              <div class="xc-proplay">
-                  <audio class="audioMp3">
-                    <source src="../music/3.mp3" type="audio/mp3"></audio>
-                  <div class="xc-proplay-btns">
-                    <!-- <img class="xc-proplay-img" src="../img/readText-play-active.png" alt="播放"> -->
-                    <img class="xc-proplay-img tooglePlay play" src="../img/readText-play.png" alt="播放">
-                    <!-- <img class="xc-proplay-img" src="../img/realText-zt.png" alt="暂替"> -->
-                    <img class="xc-proplay-img tooglePause" src="../img/realText-zt-active.png" alt="暂替">
-                  </div>
-                  <div class="xc-proplay-box">
-                    <span class="xc-proplay-time currentTime">00:00</span>
-                    <div class="xc-proplay-outher">
-                      <div class="xc-proplay-inner" style="width: 0%"></div>
-                    </div>
-                    <span class="xc-proplay-time duration">00:00</span>
-                  </div>
+            <div class="xc-proplay">
+              <audio class="audioMp3">
+                <source src="../music/3.mp3" type="audio/mp3"></audio>
+              <div class="xc-proplay-btns">
+                <!-- <img class="xc-proplay-img" src="../img/readText-play-active.png" alt="播放"> -->
+                <img class="xc-proplay-img tooglePlay play" src="../img/readText-play.png" alt="播放">
+                <!-- <img class="xc-proplay-img" src="../img/realText-zt.png" alt="暂替"> -->
+                <img class="xc-proplay-img tooglePause" src="../img/realText-zt-active.png" alt="暂替">
+              </div>
+              <div class="xc-proplay-box">
+                <span class="xc-proplay-time currentTime">00:00</span>
+                <div class="xc-proplay-outher">
+                  <div class="xc-proplay-inner" style="width: 0%"></div>
                 </div>
+                <span class="xc-proplay-time duration">00:00</span>
+              </div>
+            </div>
             <h2 class="xc-coustom-title">第一节 (共5小题；每小题1.5分,满分7.5分)</h2>
             <p class="xc-coustom-tip">听下面5段对话。每段对话后有一个小题，从题中所给的A、B、C三个选项中选出最佳选项，并标在试卷的相应位置。听完每段对话后，你都有10秒钟的时间来回答有关小题和阅读下一小题。每段对话仅读一遍。</p>
             <div class="xc-coustom-pent">
@@ -237,29 +237,47 @@
                 </div>
               </div>
             </div>
+            <div class="xc-proplay" style='margin-top: 10px'>
+              <audio class="audioMp3">
+                <source src="../music/3.mp3" type="audio/mp3"></audio>
+              <div class="xc-proplay-btns">
+                <!-- <img class="xc-proplay-img" src="../img/readText-play-active.png" alt="播放"> -->
+                <img class="xc-proplay-img tooglePlay play" src="../img/readText-play.png" alt="播放">
+                <!-- <img class="xc-proplay-img" src="../img/realText-zt.png" alt="暂替"> -->
+                <img class="xc-proplay-img tooglePause" src="../img/realText-zt-active.png" alt="暂替">
+              </div>
+              <div class="xc-proplay-box">
+                <span class="xc-proplay-time currentTime">00:00</span>
+                <div class="xc-proplay-outher">
+                  <div class="xc-proplay-inner" style="width: 0%"></div>
+                </div>
+                <span class="xc-proplay-time duration">00:00</span>
+              </div>
+            </div>
             <h2 class="xc-coustom-title">第二节（共15小题，每小题1.5分, 满分22.5分）</h2>
-            <p class="xc-coustom-tip">听下面5段对话或独白。每段对话或独白后 几个小题，从题中所给的A、B、C三个选项中选出虽佳选项，并标在试卷的相应位置。听每段对话或独白前，你将有时间阅读各个小题，每小题5秒钟; 听完后，各小题将给出5秒钟的作答时间。每段对话或独白读两遍。</p>
+            <p class="xc-coustom-tip">听下面5段对话或独白。每段对话或独白后
+              几个小题，从题中所给的A、B、C三个选项中选出虽佳选项，并标在试卷的相应位置。听每段对话或独白前，你将有时间阅读各个小题，每小题5秒钟; 听完后，各小题将给出5秒钟的作答时间。每段对话或独白读两遍。</p>
             <p class="xc-coustom-tip-small">听第6段材料，回答第6、7题。</p>
             <div class="xc-coustom-pent">
-                <div class="coustom-pent-head">
-                  <span class="num">6.</span>题干题干题干题干题干题干
-                </div>
-                <div class="coustom-pent-body">
-                  <div class="coustom-label can radio">
-                    <div>
-                      <label class="label active">
-                        <input class="radio-input" type="radio" value="1" name="coustom2" checked />A选项</label>
-                    </div>
-                    <div>
-                      <label class="label">
-                        <input class="radio-input" type="radio" value="2" name="coustom2" />B选项</label>
-                    </div>
-                    <div>
-                      <label class="label">
-                        <input class="radio-input" type="radio" value="3" name="coustom2" />C选项</label>
-                    </div>
+              <div class="coustom-pent-head">
+                <span class="num">6.</span>题干题干题干题干题干题干
+              </div>
+              <div class="coustom-pent-body">
+                <div class="coustom-label can radio">
+                  <div>
+                    <label class="label active">
+                      <input class="radio-input" type="radio" value="1" name="coustom2" checked />A选项</label>
+                  </div>
+                  <div>
+                    <label class="label">
+                      <input class="radio-input" type="radio" value="2" name="coustom2" />B选项</label>
+                  </div>
+                  <div>
+                    <label class="label">
+                      <input class="radio-input" type="radio" value="3" name="coustom2" />C选项</label>
                   </div>
                 </div>
+              </div>
             </div>
             <div class="xc-coustom-pent">
               <div class="coustom-pent-head">
@@ -282,28 +300,44 @@
                 </div>
               </div>
             </div>
-            
+            <div class="xc-proplay" style='margin-top: 10px'>
+              <audio class="audioMp3">
+                <source src="../music/3.mp3" type="audio/mp3"></audio>
+              <div class="xc-proplay-btns">
+                <!-- <img class="xc-proplay-img" src="../img/readText-play-active.png" alt="播放"> -->
+                <img class="xc-proplay-img tooglePlay play" src="../img/readText-play.png" alt="播放">
+                <!-- <img class="xc-proplay-img" src="../img/realText-zt.png" alt="暂替"> -->
+                <img class="xc-proplay-img tooglePause" src="../img/realText-zt-active.png" alt="暂替">
+              </div>
+              <div class="xc-proplay-box">
+                <span class="xc-proplay-time currentTime">00:00</span>
+                <div class="xc-proplay-outher">
+                  <div class="xc-proplay-inner" style="width: 0%"></div>
+                </div>
+                <span class="xc-proplay-time duration">00:00</span>
+              </div>
+            </div>
             <p class="xc-coustom-tip-small">听第8段材料，回答第10~12题。</p>
             <div class="xc-coustom-pent">
-                <div class="coustom-pent-head">
-                  <span class="num">10.</span>题干题干题干题干题干题干
-                </div>
-                <div class="coustom-pent-body">
-                  <div class="coustom-label can radio">
-                    <div>
-                      <label class="label active">
-                        <input class="radio-input" type="radio" value="1" name="coustom2" checked />A选项</label>
-                    </div>
-                    <div>
-                      <label class="label">
-                        <input class="radio-input" type="radio" value="2" name="coustom2" />B选项</label>
-                    </div>
-                    <div>
-                      <label class="label">
-                        <input class="radio-input" type="radio" value="3" name="coustom2" />C选项</label>
-                    </div>
+              <div class="coustom-pent-head">
+                <span class="num">10.</span>题干题干题干题干题干题干
+              </div>
+              <div class="coustom-pent-body">
+                <div class="coustom-label can radio">
+                  <div>
+                    <label class="label active">
+                      <input class="radio-input" type="radio" value="1" name="coustom2" checked />A选项</label>
+                  </div>
+                  <div>
+                    <label class="label">
+                      <input class="radio-input" type="radio" value="2" name="coustom2" />B选项</label>
+                  </div>
+                  <div>
+                    <label class="label">
+                      <input class="radio-input" type="radio" value="3" name="coustom2" />C选项</label>
                   </div>
                 </div>
+              </div>
             </div>
             <div class="xc-coustom-pent">
               <div class="coustom-pent-head">
@@ -327,26 +361,26 @@
               </div>
             </div>
             <div class="xc-coustom-pent">
-                <div class="coustom-pent-head">
-                  <span class="num">12.</span>题干题干题干题干题干题干
-                </div>
-                <div class="coustom-pent-body">
-                  <div class="coustom-label can radio">
-                    <div>
-                      <label class="label active">
-                        <input class="radio-input" type="radio" value="1" name="coustom2" checked />A选项</label>
-                    </div>
-                    <div>
-                      <label class="label">
-                        <input class="radio-input" type="radio" value="2" name="coustom2" />B选项</label>
-                    </div>
-                    <div>
-                      <label class="label">
-                        <input class="radio-input" type="radio" value="3" name="coustom2" />C选项</label>
-                    </div>
+              <div class="coustom-pent-head">
+                <span class="num">12.</span>题干题干题干题干题干题干
+              </div>
+              <div class="coustom-pent-body">
+                <div class="coustom-label can radio">
+                  <div>
+                    <label class="label active">
+                      <input class="radio-input" type="radio" value="1" name="coustom2" checked />A选项</label>
+                  </div>
+                  <div>
+                    <label class="label">
+                      <input class="radio-input" type="radio" value="2" name="coustom2" />B选项</label>
+                  </div>
+                  <div>
+                    <label class="label">
+                      <input class="radio-input" type="radio" value="3" name="coustom2" />C选项</label>
                   </div>
                 </div>
               </div>
+            </div>
           </div>
         </div>
       </div>
